--- a/app/src/main/res/layout/activity_blog_details.xml
+++ b/app/src/main/res/layout/activity_blog_details.xml
@@ -34,4 +34,12 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:layout_marginTop="12dp" />
+
+    <Button
+        android:id="@+id/btn_view_comments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Comments"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"/>
 </LinearLayout>
