--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,14 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_blog"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_blog" />
+        <item
+            android:id="@+id/nav_market"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_market" />
+        <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
@@ -16,9 +24,6 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
-        <item
-            android:id="@+id/nav_blog"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_blog" />
+
     </group>
 </menu>
