--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_blog">
+
+    <fragment
+        android:id="@+id/nav_blog"
+        android:name="com.koistorynew.ui.blog.BlogFragment"
+        android:label="@string/menu_blog"
+        tools:layout="@layout/fragment_blog" />
+
+    <fragment
+        android:id="@+id/nav_market"
+        android:name="com.koistorynew.ui.market.MarketFragment"
+        android:label="@string/menu_market"
+        tools:layout="@layout/fragment_market" />
 
     <fragment
         android:id="@+id/nav_home"
@@ -23,9 +35,4 @@
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
-    <fragment
-        android:id="@+id/nav_blog"
-        android:name="com.koistorynew.ui.blog.BlogFragment"
-        android:label="@string/menu_blog"
-        tools:layout="@layout/fragment_blog" />
 </navigation>
