--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,7 +22,11 @@
         android:name="com.koistorynew.ui.consult.ConsultFragment"
         android:label="@string/menu_consult"
         tools:layout="@layout/fragment_consult" />
-
+    <fragment
+        android:id="@+id/nav_mymarket"
+        android:name="com.koistorynew.ui.mymarket.MyMarketFragment"
+        android:label="@string/menu_mymarket"
+        tools:layout="@layout/fragment_mymarket" />
     <fragment
         android:id="@+id/nav_home"
         android:name="com.koistorynew.ui.home.HomeFragment"
