--- a/app/src/main/res/layout/fragment_consult.xml
+++ b/app/src/main/res/layout/fragment_consult.xml
@@ -6,16 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.consult.ConsultFragment">
 
-    <TextView
-        android:id="@+id/text_consult"
-        android:text="fragment_slideshow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_market"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
