layout and fetch API

--- a/app/src/main/res/layout/activity_post_mymarket_detail.xml
+++ b/app/src/main/res/layout/activity_post_mymarket_detail.xml
@@ -91,7 +91,13 @@
                         android:layout_marginBottom="16dp"
                         android:textSize="16sp"
                         />
-
+                    <TextView
+                        android:id="@+id/createAt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:textSize="16sp"
+                        />
 
                     <Button
                         android:id="@+id/callButton"
