--- a/app/src/main/res/layout/item_post_mymarket.xml
+++ b/app/src/main/res/layout/item_post_mymarket.xml
@@ -65,6 +65,16 @@
             app:layout_constraintStart_toEndOf="@id/editButton"
             app:layout_constraintTop_toBottomOf="@id/priceTextView" />
 
+        <Button
+            android:id="@+id/editImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@android:color/holo_green_light"
+            android:text="Sửa ảnh"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
