--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,6 +21,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_mymarket" />
         <item
+            android:id="@+id/nav_myconsult"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_myconsult" />
+        <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
