--- a/app/src/main/res/layout/item_consult.xml
+++ b/app/src/main/res/layout/item_consult.xml
@@ -56,6 +56,18 @@
             </LinearLayout>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/consultTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:text="Title"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/container" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
@@ -63,7 +75,7 @@
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/container" />
+            app:layout_constraintTop_toBottomOf="@id/consultTitle" />
 
         <!-- Mô tả sản phẩm -->
         <TextView
