--- a/app/src/main/res/layout/activity_edit_consult.xml
+++ b/app/src/main/res/layout/activity_edit_consult.xml
@@ -10,24 +10,30 @@
         android:padding="16dp">
 
         <EditText
-            android:id="@+id/edit_text_name"
+            android:id="@+id/add_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Product Name" />
-
+            android:hint="Content" />
 
         <EditText
-            android:id="@+id/edit_text_description"
+            android:id="@+id/add_post_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Description" />
+            android:hint="Post Type" />
+
+        <EditText
+            android:id="@+id/add_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Title" />
+
 
         <Button
-            android:id="@+id/button_edit"
+            android:id="@+id/button_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#456789"
-            android:text="Edit" />
+            android:backgroundTint="#762727"
+            android:text="EDIT" />
 
     </LinearLayout>
 </ScrollView>
