--- a/app/src/main/res/layout/item_my_consult.xml
+++ b/app/src/main/res/layout/item_my_consult.xml
@@ -56,6 +56,19 @@
             </LinearLayout>
         </LinearLayout>
 
+
+        <TextView
+            android:id="@+id/consultTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:text="Title"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/container" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
