--- a/app/src/main/res/layout/item_my_consult.xml
+++ b/app/src/main/res/layout/item_my_consult.xml
@@ -76,7 +76,7 @@
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/container" />
+            app:layout_constraintTop_toBottomOf="@id/consultTitle" />
 
         <!-- Mô tả sản phẩm -->
         <TextView
