--- a/app/src/main/res/layout/activity_edit_consult.xml
+++ b/app/src/main/res/layout/activity_edit_consult.xml
@@ -9,31 +9,55 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sửa câu hỏi"
+            android:textSize="48sp"
+            android:textColor="@color/black"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chỉnh sửa câu hỏi"
+            android:textSize="20sp"
+            android:layout_marginBottom="32dp"
+            />
+
         <EditText
             android:id="@+id/add_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Content" />
+            android:hint="Nội dung"
+            android:background="@drawable/rounded_input"
+            android:layout_marginBottom="12dp"
+            />
 
         <EditText
             android:id="@+id/add_post_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Post Type" />
+            android:hint="Loại bài đăng"
+            android:background="@drawable/rounded_input"
+            android:layout_marginBottom="12dp"/>
 
         <EditText
             android:id="@+id/add_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Title" />
+            android:hint="Tiêu đề"
+            android:background="@drawable/rounded_input"
+            android:layout_marginBottom="36dp"/>
 
 
         <Button
             android:id="@+id/button_submit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#762727"
-            android:text="EDIT" />
+            android:text="Chỉnh sửa"
+            android:background="@drawable/rounded_button"
+            />
 
     </LinearLayout>
 </ScrollView>
