--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,22 +4,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
+    <ImageView
+        android:id="@id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:scaleType="centerCrop" />
+
     <Button
         android:id="@+id/openCamera"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Mở camera" />
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:contentDescription="Camera Image" />
+        android:layout_marginTop="16dp"
+        android:text="Chụp ảnh" />
 
     <Button
         android:id="@+id/buttonCapture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Chụp Hình" />
+        android:layout_marginTop="8dp"
+        android:text="Upload ảnh" />
+
 </LinearLayout>
