--- a/app/src/main/res/layout/activity_email_camera.xml
+++ b/app/src/main/res/layout/activity_email_camera.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+    <EditText
+        android:id="@+id/emailText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email" />
 
     <ImageView
         android:id="@id/imageView"
