--- a/app/src/main/res/layout/activity_post_market_comment.xml
+++ b/app/src/main/res/layout/activity_post_market_comment.xml
@@ -2,24 +2,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:background="#F4F4F4">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/commentRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:background="@android:color/white"
+        android:elevation="4dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@id/commentInputContainer"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:id="@+id/commentInputContainer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/input_background"
         android:orientation="horizontal"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,14 +35,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/white"
+            android:background="@android:color/transparent"
             android:hint="Add a comment..."
             android:imeOptions="actionSend"
             android:inputType="text"
             android:padding="8dp"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
-            />
+            android:textColorHint="#A0A0A0"
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@+id/sendCommentButton"
@@ -46,9 +50,9 @@
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="Send comment"
-            android:src="@drawable/ic_send"
             android:padding="10dp"
-            app:tint="@color/white" />
+            android:src="@drawable/ic_send"
+            app:tint="@color/black" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
