--- a/app/src/main/res/layout/item_post_market.xml
+++ b/app/src/main/res/layout/item_post_market.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="18dp"
-    android:padding="18dp"
-    android:orientation="vertical">
+    android:layout_margin="10dp"
+    android:orientation="vertical"
+    android:padding="8dp"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="0dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -25,24 +27,62 @@
             android:id="@+id/nameTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:ellipsize="end"
             android:maxLines="2"
+            android:padding="5dp"
             android:paddingTop="8dp"
             android:text="Product Name"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageView" />
 
-        <TextView
-            android:id="@+id/priceTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp"
-            android:text="Product Price"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nameTextView" />
+            app:layout_constraintTop_toBottomOf="@id/nameTextView">
+
+            <ImageView
+                android:id="@+id/priceIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="Price Icon"
+                android:src="@drawable/ic_money" />
+
+            <TextView
+                android:id="@+id/priceTextView"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingBottom="5dp"
+                android:text="Product Price"
+                android:textColor="#FFA262"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/dateIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="Date Icon"
+                android:src="@drawable/ic_date" />
+
+            <TextView
+                android:id="@+id/createAt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2024-10-22"
+                android:layout_marginLeft="3dp"
+                android:textColor="#B9B9B9"
+                android:textSize="14sp" />
+        </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
