--- a/app/src/main/res/layout/item_my_consult.xml
+++ b/app/src/main/res/layout/item_my_consult.xml
@@ -5,12 +5,13 @@
     android:layout_height="wrap_content"
     android:layout_margin="18dp"
     android:padding="18dp"
-    app:cardCornerRadius="12dp">
+    app:cardCornerRadius="16dp"
+    app:cardElevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <!-- LinearLayout to hold Avatar and User Name & Date -->
         <LinearLayout
