--- a/app/src/main/res/layout/item_post_mymarket.xml
+++ b/app/src/main/res/layout/item_post_mymarket.xml
@@ -5,12 +5,14 @@
     android:layout_height="wrap_content"
     android:layout_margin="18dp"
     android:orientation="vertical"
-    android:padding="18dp">
+    android:padding="18dp"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        >
 
         <ImageView
             android:id="@+id/imageView"
@@ -29,6 +31,7 @@
             android:maxLines="2"
             android:paddingTop="8dp"
             android:text="Product Name"
+            android:layout_marginLeft="16dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
+            android:layout_marginLeft="16dp"
+
             android:text="Product Price"
             app:layout_constraintBottom_toTopOf="@+id/editButton"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +58,8 @@
             android:text="Sửa"
             app:layout_constraintEnd_toStartOf="@+id/deleteButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/priceTextView" />
+            app:layout_constraintTop_toBottomOf="@id/priceTextView"
+            />
 
         <Button
             android:id="@+id/deleteButton"
@@ -63,7 +69,9 @@
             android:text="Xóa"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/editButton"
-            app:layout_constraintTop_toBottomOf="@id/priceTextView" />
+            app:layout_constraintTop_toBottomOf="@id/priceTextView"
+            android:layout_marginRight="16dp"
+            />
 
         <Button
             android:id="@+id/editImageButton"
@@ -73,7 +81,9 @@
             android:backgroundTint="@android:color/holo_green_light"
             android:text="Sửa ảnh"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
